fixed broken css on social links

--- a/source/stylesheets/rubymacros.css.scss
+++ b/source/stylesheets/rubymacros.css.scss
@@ -80,7 +80,11 @@ pre {
   word-break: break-all;
 }
 
-ul.social-links {
+ul.social-links li {
+  display: inline;
+}
+
+.g-plusone {
   display: inline;
 }
 
