--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -22,13 +22,21 @@ $side-gutter-width: $gutter-width;
 
 body {
   font-family: $font-family;
-  color: $font-color; 
+  color: $font-color;
 }
 
-a {
   @include link-colors($link-color, $link-hover-color, $link-focus-color, $link-active-color, $link-visited-color);
+a {
 }
 
 #main {
   padding: 50px;
+}
+
+ul.social_links li {
+  display: inline;
+}
+
+.g-plusone {
+  display: inline;
 }
